# tc-assignment

./: .gitignore  package-lock.json
backend/: Cargo.toml  cookies.txt  users.sqlite3
backend/src/: cors.rs  main.rs  types.rs  user.rs  users.slite3
backend/src/data/: database.rs  mod.rs  register_user.rs  utils.rs
backend/src/data/rooms/: create.rs  get.rs  invitation_code.rs  join.rs  leave.rs  mod.rs
backend/src/data/session/: login.rs  logout.rs  mod.rs  verify.rs
backend/src/data/user/: mod.rs  register.rs
backend/src/routes/: auth.rs  health.rs  mod.rs
backend/src/routes/auth/: is_logged_in.rs  login.rs  logout.rs  register.rs
backend/src/routes/rooms/: create.rs  delete.rs  get.rs  invitation_code.rs  join.rs  leave.rs  mod.rs
backend/test-scripts/: create-room.sh  get-invite-code.sh  get-rooms.sh  is_logged_in.sh  join-room.sh  leave-room.sh  login-invalid-pass.sh  login-nonexistant-user.sh  login-test-user-2-success.sh  login-test-user-success.sh  logout.sh  register-test-user-2.sh  register-test-user.sh
frontend/: biome.json  package-lock.json  package.json
frontend/.husky/: pre-commit
frontend/src/: App.vue
frontend/src/components/: Home.vue  Login.vue  Navbar.vue  Register.vue  login.vue
frontend/src/router/: index.js
