[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bcrypt = "0.18.0"
deadpool-sqlite = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-cookies = "0.11.0"
uuid = { version = "1.20.0", features = ["v4"] }
